# jc-selenium-helper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: .pages  index.md  requirements.txt
docs/development/: index.md
docs/getting_started/: index.md
docs/reference/: .pages  axe.md  browser.md  colors.md  config.md  index.md  migration.md  pytest_plugin.md
docs/superpowers/notes/: 2026-07-04-audit.md
docs/superpowers/plans/: 2026-07-04-jc-selenium-helper.md  2026-07-04-m0.2-test-backfill.md  2026-07-05-audit-batch-m1.1-m3.md  2026-07-05-legacy-coverage-backfill.md  2026-07-05-m0.2-leftovers.md  2026-07-05-m2.1-coverage-floor.md
docs/superpowers/prompts/: 2026-07-04-audit.md
docs/superpowers/specs/: 2026-07-04-jc-selenium-helper-design.md  2026-07-04-m0.2-test-backfill-design.md  2026-07-05-audit-batch-m1.1-m3-design.md  2026-07-05-legacy-coverage-backfill-design.md  2026-07-05-m0.2-leftovers-design.md  2026-07-05-m2.1-coverage-floor-design.md
src/jc_selenium_helper/: __init__.py  axe.py  browser.py  colors.py  config.py  legacy.py  plugin.py
tests/: conftest.py  test_axe.py  test_browser_actions.py  test_browser_assertions.py  test_browser_finders.py  test_browser_frame.py  test_browser_waits.py  test_colors.py  test_config.py  test_legacy.py  test_package.py  test_plugin.py
tests/fixtures/: a11y_bad.html  basic.html  dynamic.html  frame.html  inner.html  offset.html  target.html
