[project]
name = "jc-selenium-helper"
version = "0.2.0"
description = "Selenium WebDriver helper utilities for writing browser tests"
authors = [{ name = "Alexander Jacob", email = "alexander.jacob@jacob-consulting.de" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "selenium>=4.38.0",
]

[project.urls]
Homepage = "https://github.com/jacob-consulting/jc-selenium-helper"
Documentation = "https://jc-selenium-helper.readthedocs.io"

[project.optional-dependencies]
pytest = ["pytest>=8", "pytest-selenium>=4.1.0"]
config = ["dynaconf>=3.2"]
axe = ["axe-selenium-python>=2.1.6"]
all = ["jc-selenium-helper[pytest,config,axe]"]
dev = [
    "ruff",
    "pre-commit",
    "bump-my-version",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
]
test = [
    "jc-selenium-helper[pytest,config,axe]",
    "nox",
    "pytest-cov",
    "pytest-xdist",
]

[project.entry-points.pytest11]
jc_selenium_helper = "jc_selenium_helper.plugin"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jc_selenium_helper = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.bumpversion]
current_version = "0.2.0"
allow_dirty = false
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/jc_selenium_helper/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
